--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Purdue graduate with experience in customer service and warehouse operations whos looking to get into the coding job market. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Aberdeen Washington</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like video games, computer hardware, fishing, and nature.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a web deveolpe4r</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Redmond Washington</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I find the layout and composition of websites interesting, and I want to learn more about them</p>
     </section>
 
     <footer id="footer">
